# tiny_video_player

./: .gitignore  README.md
testmedia/: Johnny.webm
tutorial01/: CMakeLists.txt  main.cpp
tutorial02/: main.cpp
tutorial03/: CMakeLists.txt  main.cpp
